# xorg-libxcursor

./: .cvsignore  .gitignore  .gitlab-ci.yml  ChangeLog  Makefile.am  autogen.sh  configure.ac  xcursor.pc.in
include/X11/Xcursor/: Xcursor.h
man/: Makefile.am  Xcursor.man  makelinks
src/: .gitignore  Makefile.am  cursor.c  display.c  file.c  library.c  xcursorint.h  xlib.c
